--- a/ kindeditor/3.x/demo/demo.html
+++ b/ kindeditor/3.x/demo/demo.html
@@ -6,7 +6,7 @@
 <body>
 <form name="test" method="post" onsubmit="javascript:KindEditorUtil.getData('content'); alert(document.getElementsByName('content')[0].value);return false;">
 <div align="center">
-<textarea name="content" style="display:none;"></textarea>
+<textarea name="content" style="display:none;"><br></textarea>
 </div>
 <script type="text/javascript" src="./../KindEditor.js"></script>
 <script type="text/javascript">
