--- a/ kindeditor/3.x/examples/default_all.html
+++ b/ kindeditor/3.x/examples/default_all.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" charset="utf-8" src="./../ke.js"></script>
 <script type="text/javascript">
 KE.show({
-	textareaName : 'content',
+	id : 'content',
 	wyswygMode : true,
 	skinType : 'default',
 	langType : 'zh-cn',
@@ -17,7 +17,7 @@ KE.show({
 <body>
 <form name="test" method="post">
 <div align="center">
-<textarea name="content" style="width:700px;height:400px;"><br></textarea>
+<textarea id="content" name="content" style="width:700px;height:400px;visibility:hidden;"><br></textarea>
 </div>
 <br/>
 <div align="center">
