--- a/ kindeditor/3.x/examples/default_all.html
+++ b/ kindeditor/3.x/examples/default_all.html
@@ -5,19 +5,12 @@
 </head>
 <script type="text/javascript" charset="utf-8" src="./../ke.js"></script>
 <script type="text/javascript">
-KE.show({
-	id : 'content',
-	wyswygMode : true,
-	skinType : 'default',
-	langType : 'zh-cn',
-	pluginType : 'all',
-	cssPath : './default_all.css'
-});
+KE.show({id : 'content'});
 </script>
 <body>
 <form name="test" method="post">
 <div align="center">
-<textarea id="content" name="content" style="width:700px;height:400px;visibility:hidden;"><br></textarea>
+<textarea id="content" name="content" style="width:700px;height:400px;visibility:hidden;"></textarea>
 </div>
 <br/>
 <div align="center">
