--- a/ kindeditor/3.x/examples/default_all.html
+++ b/ kindeditor/3.x/examples/default_all.html
@@ -6,11 +6,14 @@
 <script type="text/javascript" charset="utf-8" src="./../ke.js"></script>
 <script type="text/javascript">
 KE.show({id : 'content'});
+KE.show({id : 'content2'});
 </script>
 <body>
 <form name="test" method="post">
 <div align="center">
 <textarea id="content" name="content" style="width:700px;height:400px;visibility:hidden;"></textarea>
+<br/>
+<textarea id="content2" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
 </div>
 <br/>
 <div align="center">
