--- a/ kindeditor/3.x/examples/default_all.html
+++ b/ kindeditor/3.x/examples/default_all.html
@@ -5,7 +5,10 @@
 </head>
 <script type="text/javascript" charset="utf-8" src="./../ke.js"></script>
 <script type="text/javascript">
-KE.show({id : 'content'});
+KE.show({
+	id : 'content',
+	cssPath : './default_all.css'
+});
 </script>
 <body>
 <form name="test" method="post">
