--- a/ kindeditor/3.x/examples/default_simple.html
+++ b/ kindeditor/3.x/examples/default_simple.html
@@ -1,9 +1,9 @@
 ﻿<html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>KindEditor 3.0 alpha</title>
+<title>KindEditor 3.0 simple version</title>
 </head>
-<script type="text/javascript" charset="utf-8" src="./../ke.js"></script>
+<script type="text/javascript" charset="utf-8" src="./../ke-simple.js"></script>
 <script type="text/javascript">
 KE.show({
 	id : 'content1',
