--- a/ kindeditor/3.x/examples/default_all.html
+++ b/ kindeditor/3.x/examples/default_all.html
@@ -11,7 +11,11 @@ KE.show({
 });
 KE.show({
 	id : 'content2',
-	cssPath : './default_all.css'
+	cssPath : './default_all.css',
+	items : [
+	'source', 'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline', 
+	'removeformat', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist', 
+	'insertunorderedlist', 'link', 'unlink']
 });
 </script>
 <body>
