--- a/src/plugins/image.html
+++ b/src/plugins/image.html
@@ -42,7 +42,7 @@
   </script>
 </head>
 <body>
-  <form name="uploadForm" method="post" enctype="multipart/form-data" action="./../php/upload.php">
+  <form name="uploadForm" method="post" enctype="multipart/form-data" action="./../../php/upload.php">
     <input type="hidden" id="editorId" name="id" value="" />
     <table border="0" cellpadding="0" cellspacing="0">
       <tr>
