--- a/src/plugins/image.html
+++ b/src/plugins/image.html
@@ -8,6 +8,7 @@
     font-size:12px;
     margin: 0px;
     background-color:#F0F0EE;
+    overflow: hidden;
     }
     td.left1 {
     font-size:12px;
