--- a/examples/demo-01.html
+++ b/examples/demo-01.html
@@ -42,14 +42,15 @@ KE.show({
 });</pre></div>
   <form name="example" method="post" action="./../php/demo.php">
     <div class="editor">
-      <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;">&lt;h2&gt;&lt;font style=&quot;BACKGROUND-COLOR: #ff7f50&quot; color=#ffffff&gt;这是测试内容&lt;/font&gt;&lt;/h2&gt;
-&lt;h1&gt;欢迎使用&lt;font face=&quot;Arial Black&quot; color=#008000&gt;KindEditor &lt;img src=&quot;http://www.kindsoft.net/editor/icons/etc_33.gif&quot; alt=&quot;ICON&quot;&gt;&lt;/font&gt;&lt;/h1&gt;
-&lt;div&gt;&lt;img style=&quot;WIDTH: 150px; HEIGHT: 30px&quot; height=30 src=&quot;http://www.kindsoft.net/images/logo.gif&quot; width=150 border=1 alt=&quot;LOGO&quot;&gt;&lt;/div&gt;
-&lt;div&gt;&amp;nbsp;&lt;/div&gt;
-&lt;div&gt;&amp;nbsp;&lt;/div&gt;
-&lt;div&gt;&amp;nbsp;&lt;/div&gt;
-&lt;div&gt;&amp;nbsp;&lt;/div&gt;
-&lt;div&gt;&amp;nbsp;&lt;/div&gt;</textarea>
+      <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;">
+<strong>月下独酌</strong> - 李白<br /><br />
+花间一壶酒，独酌无相亲。<br /><br />
+举杯邀明月，对影成三人。<br /><br />
+月既不解饮，影徒随我身。<br /><br />
+暂伴月将影，行乐须及春。<br /><br />
+我歌月徘徊，我舞影零乱。<br /><br />
+醒时同交欢，醉后各分散。<br /><br />
+永结无情游，相期邈云汉。<br /><br /></textarea>
     </div>
     <input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
     <input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
