--- a/examples/index.html
+++ b/examples/index.html
@@ -25,6 +25,7 @@
 <li><a href="./demo-07.html" target="_blank">demo-07.html</a> (编辑器在relative对象内)</li>
 <li><a href="./demo-08.html" target="_blank">demo-08.html</a> (一个页面多个编辑器)</li>
 <li><a href="./demo-09.html" target="_blank">demo-09.html</a> (TinyMCE风格)</li>
+<li><a href="./demo-10.html" target="_blank">demo-10.html</a> (编辑器在在iframe内)</li>
 </ol>
 </body>
 </html>
