--- a/examples/index.html
+++ b/examples/index.html
@@ -26,6 +26,7 @@
 <li><a href="./demo-08.html" target="_blank">demo-08.html</a> (一个页面多个编辑器)</li>
 <li><a href="./demo-09.html" target="_blank">demo-09.html</a> (TinyMCE风格)</li>
 <li><a href="./demo-10.html" target="_blank">demo-10.html</a> (编辑器在在iframe内)</li>
+<li><a href="./demo-11.html" target="_blank">demo-11.html</a> (在IE回车时插入BR)</li>
 </ol>
 </body>
 </html>
