--- a/examples/index.html
+++ b/examples/index.html
@@ -28,6 +28,7 @@
 <li><a href="./demo-10.html" target="_blank">demo-10.html</a> (编辑器在在iframe内)</li>
 <li><a href="./demo-11.html" target="_blank">demo-11.html</a> (在IE回车时插入BR)</li>
 <li><a href="./demo-12.html" target="_blank">demo-12.html</a> (编辑器在没有指定DOCTYPE的页面内)</li>
+<li><a href="./demo-13.html" target="_blank">demo-13.html</a> (GB2312编码页面调用编辑器)</li>
 </ol>
 </body>
 </html>
