--- a/examples/demo-13.html
+++ b/examples/demo-13.html
@@ -1,7 +1,17 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=gb2312" />
     <title>KindEditor 3.0</title>
+    <style type="text/css" rel="stylesheet">
+      form {
+      margin: 0;
+      }
+      .editor {
+      margin-top: 5px;
+      margin-bottom: 5px;
+      }
+    </style>
     <script type="text/javascript" charset="utf-8" src="./../src/lang/zh_CN.js"></script>
     <script type="text/javascript" charset="utf-8" src="./../src/kindeditor-core.js"></script>
     <script type="text/javascript" charset="utf-8" src="./../src/plugin-all.js"></script>
