Added demo 14,15 Changed hideBottomMode to resizeMode

--- a/examples/index.html
+++ b/examples/index.html
@@ -29,6 +29,8 @@
 <li><a href="./demo-11.html" target="_blank">demo-11.html</a> (在IE回车时插入BR)</li>
 <li><a href="./demo-12.html" target="_blank">demo-12.html</a> (编辑器在没有指定DOCTYPE的页面内)</li>
 <li><a href="./demo-13.html" target="_blank">demo-13.html</a> (GB2312编码页面调用编辑器)</li>
+<li><a href="./demo-14.html" target="_blank">demo-14.html</a> (清空内容,插入内容)</li>
+<li><a href="./demo-15.html" target="_blank">demo-15.html</a> (只读模式)</li>
 </ol>
 </body>
 </html>
