--- a/examples/demo-06.html
+++ b/examples/demo-06.html
@@ -37,7 +37,7 @@
   <div class="source"><pre>
 KE.show({
     id : 'content6',
-    hideBottomMode : true,
+    resizeMode : false,
     cssPath : './index.css'
 });
 </pre></div>
