Modified chinese words in demo

--- a/examples/demo-15.html
+++ b/examples/demo-15.html
@@ -37,7 +37,7 @@
     </script>
   </head>
   <body>
-    <h3>默认模式</h3>
+    <h3>只读模式</h3>
     <div class="source"><pre>
 KE.init({
     id : 'content1',
