--- a/examples/demo-14.html
+++ b/examples/demo-14.html
@@ -42,7 +42,7 @@
     </script>
   </head>
   <body>
-    <h3>默认模式</h3>
+    <h3>清空内容,插入内容</h3>
     <div class="source"><pre>
 function clearEditor(id) {
     KE.g[id].iframeDoc.open();
