--- a/examples/index.html
+++ b/examples/index.html
@@ -31,6 +31,7 @@
 <li><a href="./demo-13.html" target="_blank">demo-13.html</a> (GB2312编码页面调用编辑器)</li>
 <li><a href="./demo-14.html" target="_blank">demo-14.html</a> (清空内容,插入内容)</li>
 <li><a href="./demo-15.html" target="_blank">demo-15.html</a> (只读模式)</li>
+<li><a href="./demo-16.html" target="_blank">demo-16.html</a> (全屏模式)</li>
 </ol>
 </body>
 </html>
