--- a/examples/demo-06.html
+++ b/examples/demo-06.html
@@ -27,7 +27,7 @@
   <script type="text/javascript">
     KE.show({
         id : 'content6',
-        hideBottomMode : true,
+        resizeMode : false,
         cssPath : './index.css'
     });
   </script>
