--- a/examples/index.html
+++ b/examples/index.html
@@ -21,7 +21,7 @@
 <li><a href="./demo-03.html" target="_blank">demo-03.html</a> (手动加载编辑器)</li>
 <li><a href="./demo-04.html" target="_blank">demo-04.html</a> (默认模式为代码模式、没有指定CSS)</li>
 <li><a href="./demo-05.html" target="_blank">demo-05.html</a> (手动添加Onsubmit事件)</li>
-<li><a href="./demo-06.html" target="_blank">demo-06.html</a> (固定编辑器，禁止拖动调整大小)</li>
+<li><a href="./demo-06.html" target="_blank">demo-06.html</a> (只能调整高度, 禁止拖动改变大小)</li>
 <li><a href="./demo-07.html" target="_blank">demo-07.html</a> (编辑器在relative对象内)</li>
 <li><a href="./demo-08.html" target="_blank">demo-08.html</a> (一个页面多个编辑器)</li>
 <li><a href="./demo-09.html" target="_blank">demo-09.html</a> (TinyMCE风格)</li>
