Added hello,remote_image plugins

--- a/examples/index.html
+++ b/examples/index.html
@@ -32,6 +32,8 @@
 <li><a href="./demo-14.html" target="_blank">demo-14.html</a> (清空内容,插入内容)</li>
 <li><a href="./demo-15.html" target="_blank">demo-15.html</a> (只读模式)</li>
 <li><a href="./demo-16.html" target="_blank">demo-16.html</a> (全屏模式)</li>
+<li><a href="./demo-17.html" target="_blank">demo-17.html</a> (自定义插件 - 您好)</li>
+<li><a href="./demo-18.html" target="_blank">demo-18.html</a> (自定义插件 - 插入远程图片)</li>
 </ol>
 </body>
 </html>
