--- a/examples/demo-18.html
+++ b/examples/demo-18.html
@@ -20,6 +20,7 @@
       margin-bottom: 5px;
       }
       .ke-icon-remote_image {
+      background-image: url(./../src/skins/default.gif);
       background-position: 0px -496px;
       width: 16px;
       height: 16px;
