--- a/examples/demo-17.html
+++ b/examples/demo-17.html
@@ -20,6 +20,7 @@
       margin-bottom: 5px;
       }
       .ke-icon-hello {
+      background-image: url(./../src/skins/default.gif);
       background-position: 0px -672px;
       width: 16px;
       height: 16px;
