--- a/examples/demo-02.html
+++ b/examples/demo-02.html
@@ -29,7 +29,7 @@
         id : 'content2',
         cssPath : './index.css',
         items : [
-        'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
+        'undo', 'redo', 'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
         'removeformat', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist',
         'insertunorderedlist']
     });
@@ -42,12 +42,12 @@ KE.show({
     id : 'content2',
     cssPath : './index.css',
     items : [
-        'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
+        'undo', 'redo', 'fontname', 'fontsize', 'textcolor', 'bgcolor', 'bold', 'italic', 'underline',
         'removeformat', 'justifyleft', 'justifycenter', 'justifyright', 'insertorderedlist',
         'insertunorderedlist']
     });</pre></div>
   <div class="editor">
-    <textarea id="content2" name="content" style="width:400px;height:200px;visibility:hidden;"></textarea>
+    <textarea id="content2" name="content" style="width:500px;height:200px;visibility:hidden;"></textarea>
   </div>
 </body>
 </html>
