Fixed bug: has error with mootools library

--- a/examples/demo-01.html
+++ b/examples/demo-01.html
@@ -43,14 +43,15 @@ KE.show({
   <form name="example" method="post" action="./../php/demo.php">
     <div class="editor">
       <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;">
-<strong>月下独酌</strong> - 李白<br /><br />
-花间一壶酒，独酌无相亲。<br /><br />
-举杯邀明月，对影成三人。<br /><br />
-月既不解饮，影徒随我身。<br /><br />
-暂伴月将影，行乐须及春。<br /><br />
-我歌月徘徊，我舞影零乱。<br /><br />
-醒时同交欢，醉后各分散。<br /><br />
-永结无情游，相期邈云汉。<br /><br /></textarea>
+<p><strong>月下独酌</strong> - 李白</p>
+<p>花间一壶酒，独酌无相亲。</p>
+<p>举杯邀明月，对影成三人。</p>
+<p>月既不解饮，影徒随我身。</p>
+<p>暂伴月将影，行乐须及春。</p>
+<p>我歌月徘徊，我舞影零乱。</p>
+<p>醒时同交欢，醉后各分散。</p>
+<p>永结无情游，相期邈云汉。</p>
+</textarea>
     </div>
     <input type="button" name="button" value="取得内容" onclick="javascript:alert(KE.util.getData('content1'));" />
     <input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
