[trunk] modified version info of examples index

--- a/examples/demo-12.html
+++ b/examples/demo-12.html
@@ -11,7 +11,7 @@
     </script>
   </head>
   <body>
-    <h3>编辑器在没有指定DOCTYPE的页面内)默认模式</h3>
+    <h3>编辑器在没有指定DOCTYPE的页面内</h3>
     <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
   </body>
 </html>
