[trunk] fixed bug where plugin's html has invalid html code.

--- a/plugins/about.html
+++ b/plugins/about.html
@@ -34,7 +34,7 @@
       <td class="right">3.1.2</td>
     </tr>
     <tr>
-      <td class="left">技术支持: </div>
+      <td class="left">技术支持: </td>
       <td class="right"><a href="http://www.kindsoft.net/" target="_blank">http://www.kindsoft.net/</a></td>
     </tr>
   </table>
