--- a/plugins/link.html
+++ b/plugins/link.html
@@ -26,7 +26,7 @@
       <td class="right"><input type="text" id="hyperLink" name="hyperLink" value="http://" style="width:200px;" /></td>
     </tr>
     <tr>
-      <td class="left">打开类型: </div>
+      <td class="left">打开类型: </td>
       <td class="right">
         <select id="linkType" name="linkType">
           <option value="_blank">新窗口</option>
