[trunk] merged from branches/roddy for 3.2

--- a/test/full.html
+++ b/test/full.html
@@ -16,7 +16,7 @@
   <script type="text/javascript">
     KE.show({
         id : 'content1',
-        cssPath : './index.css'
+        cssPath : './../examples/index.css'
     });
   </script>
 </head>
@@ -24,10 +24,19 @@
   <h3>默认模式</h3>
   <form name="example" method="post" action="./../php/demo.php">
     <div class="editor">
-      <textarea id="content1" name="content" style="width:700px;height:200px;visibility:hidden;">
+      <textarea id="content1" name="content" style="width:900px;height:500px;visibility:hidden;">
+<P><STRONG><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">月下独酌</SPAN></STRONG><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px"> - 李白</SPAN></P>
+<P><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">花间一壶酒，独酌无相亲。</SPAN></P>
+<P><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">举杯邀明<U><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">月，对影成</SPAN></U>三人。</SPAN></P>
+<P><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">月既不解饮，影徒随我身。</SPAN></P>
+<P>暂伴月将影，行乐须及春。</P>
+<P>我歌<font color="#ff0000">月徘徊</font>，我舞影零乱。</P>
+<P>醒时同交欢，醉后各<IMG border=0 src="http://localhost/roddy/plugins/emoticons/etc_14.gif">分散。</P>
+<P>永结无情游，相期邈云汉。<IMG border=0 src="http://localhost/roddy/plugins/emoticons/etc_14.gif"></P>
+<P><STRONG>月</STRONG>下独<STRONG>酌</STRONG> - 李白</P>
 <p><strong>月下独酌</strong> - 李白</p>
 <p>花间一壶酒，独酌无相亲。</p>
-<p>举杯邀明月，对影成三人。</p>
+<p><span style="font-size:32px;">举杯邀明<u>月，对影成</u>三人。</span></p>
 <p>月既不解饮，影徒随我身。</p>
 <p>暂伴月将影，行乐须及春。</p>
 <p>我歌月徘徊，我舞影零乱。</p>
