--- a/examples/demo-15.html
+++ b/examples/demo-15.html
@@ -2,19 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>KindEditor 3.1</title>
+    <title>KindEditor 3.2</title>
     <style type="text/css" rel="stylesheet">
-      .source {
-      width: 700px;
-      font-size: 12px;
-      font-family:Courier New;
-      border: 1px solid #AAAAAA;
-      background-color: #F0F0EE;
-      padding: 5px;
-      }
-      .source pre {
-      margin: 0;
-      }
       .editor {
       margin-top: 5px;
       margin-bottom: 5px;
@@ -24,7 +13,8 @@
     <script type="text/javascript">
       KE.init({
           id : 'content1',
-          cssPath : './index.css'
+          cssPath : './index.css',
+          resizeMode : 0
       });
       KE.event.add(window, 'load', function() {
           KE.create('content1');
@@ -36,19 +26,8 @@
   </head>
   <body>
     <h3>只读模式</h3>
-    <div class="source"><pre>
-KE.init({
-    id : 'content1',
-    cssPath : './index.css'
-});
-KE.event.add(window, 'load', function() {
-    KE.create('content1');
-    KE.toolbar.disable('content1', []);
-    KE.g['content1'].iframeDoc.designMode = "off";
-    KE.g['content1'].newTextarea.disabled = true;
-});</pre></div>
     <div class="editor">
-      <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;">
+      <textarea id="content1" name="content" style="width:700px;height:400px;visibility:hidden;">
         <strong>月下独酌</strong> - 李白<br /><br />
         花间一壶酒，独酌无相亲。<br /><br />
         举杯邀明月，对影成三人。<br /><br />
