--- a/examples/demo-16.html
+++ b/examples/demo-16.html
@@ -2,19 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>KindEditor 3.1</title>
+    <title>KindEditor 3.2</title>
     <style type="text/css" rel="stylesheet">
-      .source {
-      width: 700px;
-      font-size: 12px;
-      font-family:Courier New;
-      border: 1px solid #AAAAAA;
-      background-color: #F0F0EE;
-      padding: 5px;
-      }
-      .source pre {
-      margin: 0;
-      }
       .editor {
       margin-top: 5px;
       margin-bottom: 5px;
@@ -34,25 +23,8 @@
   </head>
   <body>
     <h3>全屏模式</h3>
-    <div class="source"><pre>
-KE.init({
-    id : 'content1',
-    cssPath : './index.css'
-});
-KE.event.add(window, 'load', function() {
-    KE.create('content1');
-    KE.plugin['fullscreen'].click('content1');
-});</pre></div>
     <div class="editor">
-      <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;">
-        <strong>月下独酌</strong> - 李白<br /><br />
-        花间一壶酒，独酌无相亲。<br /><br />
-        举杯邀明月，对影成三人。<br /><br />
-        月既不解饮，影徒随我身。<br /><br />
-        暂伴月将影，行乐须及春。<br /><br />
-        我歌月徘徊，我舞影零乱。<br /><br />
-        醒时同交欢，醉后各分散。<br /><br />
-        永结无情游，相期邈云汉。<br /><br /></textarea>
+      <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
     </div>
   </body>
 </html>
