--- a/test/full.html
+++ b/test/full.html
@@ -25,9 +25,9 @@
   <form name="example" method="post" action="./../php/demo.php">
     <div class="editor">
       <textarea id="content1" name="content" style="width:900px;height:500px;visibility:hidden;">
-dddddddddddddddddddddd<br />
-DDDDDDDDDDDDDDDDDDDDDDDD<br />
-DDDDDDDDDDD<br />
+123456789<br />
+ABCDEFGHIJK<br />
+abcdefgh<br />
 <P><STRONG><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">月下独酌</SPAN></STRONG><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px"> - 李白</SPAN></P>
 <P><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">花间一壶酒，独酌无相亲。</SPAN></P>
 <P><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">举杯邀明<U><SPAN style="BACKGROUND-COLOR: #0021b0; COLOR: #ff84c3; FONT-SIZE: 32px">月，对影成</SPAN></U>三人。</SPAN></P>
@@ -51,5 +51,9 @@ DDDDDDDDDDD<br />
     <input type="button" name="button" value="取得纯文本" onclick="javascript:alert(KE.util.getPureData('content1'));" />
     <input type="submit" name="button" value="提交内容" />
   </form>
+
+  <div id="debug">
+
+  </div>
 </body>
 </html>
