--- a/examples/demo-10.html
+++ b/examples/demo-10.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>KindEditor 3.2</title>
+    <title>KindEditor</title>
   </head>
   <body>
     <h3>编辑器在iframe内</h3>
