--- a/examples/demo-12.html
+++ b/examples/demo-12.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>KindEditor 3.2</title>
+    <title>KindEditor</title>
     <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
     <script type="text/javascript">
       KE.show({
