[trunk] fixed bug where KE.format

--- a/examples/demo-13.html
+++ b/examples/demo-13.html
@@ -16,11 +16,12 @@
     <script type="text/javascript">
       KE.show({
       id : 'content1',
-      cssPath : './index.css'
+      cssPath : './index.css',
+      filterMode : false
       });
     </script>
   </head>
-    <h3>GB2312编码页面调用编辑器</h3>
+    <h3>未开启过滤模式</h3>
     <form name="example" method="post" action="./../php/demo.php">
       <div class="editor">
         <textarea id="content1" name="content" style="width:700px;height:300px;visibility:hidden;"></textarea>
