[trunk] Improved set width that support percent

--- a/examples/demo-13.html
+++ b/examples/demo-13.html
@@ -16,6 +16,7 @@
   <script type="text/javascript">
     KE.show({
         id : 'content1',
+        width: '75%',
         cssPath : './index.css',
         filterMode : false
     });
