--- a/examples/demo-06.html
+++ b/examples/demo-06.html
@@ -16,6 +16,7 @@
   <script type="text/javascript">
     KE.show({
         id : 'content6',
+        width : '80%',
         resizeMode : 1,
         cssPath : './index.css'
     });
@@ -29,11 +30,11 @@
 <body>
   <h3>只能调整高度</h3>
   <div class="editor">
-    <textarea id="content6" name="content" style="width:700px;height:100px;"></textarea>
+    <textarea id="content6" name="content" cols="100" rows="10"></textarea>
   </div>
   <h3>禁止拖动调整大小</h3>
   <div class="editor">
-    <textarea id="content7" name="content" style="width:700px;height:100px;"></textarea>
+    <textarea id="content7" name="content" cols="100" rows="10"></textarea>
   </div>
 </body>
 </html>
