[trunk] Modified demo-12

--- a/examples/index.html
+++ b/examples/index.html
@@ -27,7 +27,7 @@
 <li><a href="./demo-09.html" target="_blank">demo-09.html</a> (TinyMCE风格)</li>
 <li><a href="./demo-10.html" target="_blank">demo-10.html</a> (编辑器在在iframe内)</li>
 <li><a href="./demo-11.html" target="_blank">demo-11.html</a> (在IE回车时插入BR)</li>
-<li><a href="./demo-12.html" target="_blank">demo-12.html</a> (编辑器在没有指定DOCTYPE的页面内)</li>
+<li><a href="./demo-12.html" target="_blank">demo-12.html</a> (JavaScript动态创建编辑器)</li>
 <li><a href="./demo-13.html" target="_blank">demo-13.html</a> (未开启过滤模式)</li>
 <li><a href="./demo-14.html" target="_blank">demo-14.html</a> (清空内容,插入内容)</li>
 <li><a href="./demo-15.html" target="_blank">demo-15.html</a> (只读模式)</li>
