--- a/examples/demo-03.html
+++ b/examples/demo-03.html
@@ -27,6 +27,7 @@
       <textarea id="content3" name="content" style="width:700px;height:300px;"></textarea>
     </div>
     <input type="button" name="button" value="加载编辑器" onclick="javascript:KE.create('content3');" />
+    <input type="button" name="button" value="卸载编辑器" onclick="javascript:KE.remove('content3');" />
     <input type="submit" name="button" value="提交内容" />
   </form>
 </body>
